--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -1,73 +1,71 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Luxe Cars</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <div class="back">
-    <header>
-      <h1>Luxe Cars</h1>
-    </header>
-  </div>
-
   <h3>SHOP NOW EXCLUSIVE OFFERS FOR A LIMITED TIME</h3>
-  <button id="convertButton">30 Days Left of Deal</button>
-  <p id="output"></p>
-
-  <div class="tabs">
-    <button class="tab-btn active" id="shop" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
-    <button class="tab-btn" id="about" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
-    <button class="tab-btn" id="partners" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
- 
-
-    <section id="bio">
-      <div class="tab-content active" id="shop-content">
-        <h3>SHOP</h3>
-        <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
-      </div>
-      <div class="tab-content" id="about-content">
-        <h3>ABOUT US </h3>
-        <p>If you would like to know more about Luxe Cars co. , click on the About Us tab.</p>
-      </div>
-      <div class="tab-content" id="partners-content">
-        <h3>PARTNERS</h3>
-        <p>We are very grateful for our partners that make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
-      </div>
-    </section>
-  </div>
-
-  <h1>Contact Us</h1>
-  <form>
-    <label for="name">Name:</label>
-    <input type="text" id="name"><br><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email"><br><br>
-
-    <label for="message">Message:</label>
-    <textarea id="message"></textarea><br><br>
-
-    <input type="submit" value="Submit">
-  </form>
-  <p>The try-catch block in the code is used to validate an email address. The try block contains the code that might cause an error, which is the input.value.match(validRegex) statement. If this statement throws an error, it is caught by the catch block, which then displays an alert message saying "Invalid email address!".</p>
-
-  <footer>
-    <p>&copy; 2023 Car Shop</p>
-  </footer>
-
+<button id="convertButton">30 Days Left of Deal</button>
+<p id="output"></p>
   <script src="javascript.js" defer></script>
-  <script>
-    const button = document.querySelector('#convertButton');
-    const output = document.querySelector('#output');
-
-    button.addEventListener('click', () => {
-      const days = 30;
-      const secondsInADay = 86400;
-      const totalSeconds = days * secondsInADay;
-      output.innerText = totalSeconds + ' seconds';
-    });
-  </script>
+<script>
+ const button = document.querySelector('#convertButton');
+  const output = document.querySelector('#output');
+  button.addEventListener('click', () => {
+    const days = 30;
+    const secondsInADay = 86400;
+    const totalSeconds = days * secondsInADay;
+    output.innerText = totalSeconds + ' seconds';
+  });
+  window.onload=convertButton;
+</script>
+  <div class="back">
+  <header>
+    <h1>Luxe Cars</h1>
+  </header>
+</div>
+  <div class="tabs">
+  <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
+  <button class="tab-btn" id="about" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
+  <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
+<section id="bio">
+  <div class="tab-content active" id="shop">
+    <h3>SHOP</h3>
+    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
+  </div>
+  <div class="tab-content active" id="about">
+    <h3>ABOUT US </h3>
+    <p>If you would like to know more about Luxe Cars co. , click on the About Us tab.</p>
+  </div>
+  <div class="tab-content active" id="partners">
+    <h3>PARTNERS</h3>
+    <p> We are very grateful for our partners that  make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
+  
+    </div>
+</section>
+          <h1>Contact Us</h1>
+  <form>
+  <label>Name:</label>
+  <input type="text"><br><br>
+  <label>Email:</label>
+  <input type="email"><br><br>
+  <label>Message:</label>
+  <textarea></textarea><br><br>
+  <input type="submit" value="Submit">
+</form>
+    </main>
+  <p>The try-catch block in the code is used to validate an email address. The try block contains the code that might cause an error, which is the input.value.match(validRegex) statement. If this statement throws an error, it is caught by the catch block, which then displays an alert message saying "Invalid email address!".</p>
+    <footer>
+      <p>&copy; 2023 Car Shop</p>
+    </footer>
+    </section>
+  </main>
+   <a href="https://jacksonl11.github.io/ClientSide23/">Home</a>
+  <footer>
+    <p>Copyright © 2023 Luxe Cars Co.</p>
+  </footer>
 </body>
+  </body>
 </html>
  
