--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -5,7 +5,13 @@
   <title>Luxe Cars</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="javascript.js" defer></script>
-   <div id="popup-form" class="popup">
+  
+</head>
+  <div id="popup-form" class="popup">
+  <div class="popup-content">
+    <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
+    <form>
+    <div id="popup-form" class="popup">
   <div class="popup-content">
     <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
     <form id="verification-form">
@@ -39,7 +45,13 @@
     <button id="close-popup">Close</button>
   </div>
 </div>
-</head>
+      <button type="submit">Verify</button>
+    </form>
+    <button id="close-popup">Close</button>
+  </div>
+</div>
+
+<div id="main-content" class="hidden">
 <body>
   <h3>SHOP NOW EXCLUSIVE OFFERS FOR A LIMITED TIME</h3>
 <button id="convertButton">30 Days Left of Deal</button>
@@ -104,3 +116,5 @@
 </body>
   </body>
 </html>
+
+</div>
