--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -7,49 +7,50 @@
   <script src="javascript.js" defer></script>
   
 </head>
-  <div id="popup-form" class="popup">
-  <div class="popup-content">
-    <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
-    <form>
-    <div id="popup-form" class="popup">
-  <div class="popup-content">
-    <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
-    <form id="verification-form">
-      <label for="age">Age:</label>
-      <label for="age-checkbox">Are you older than 18?</label>
-      <input type="checkbox" id="age-checkbox" name="age-checkbox" required>
+  const form = document.getElementById('verification-form');
+form.addEventListener('submit', function(event) {
+  event.preventDefault();
+  const ageCheckbox = document.getElementById('age-checkbox');
+  const firstNameInput = document.getElementById('firstName');
+  const lastNameInput = document.getElementById('lastName');
+  const dobInput = document.getElementById('dob');
+  const licenseNumInput = document.getElementById('licenseNum');
+  const stateInput = document.getElementById('state');
+  const hasInsuranceSelect = document.getElementById('hasInsurance');
 
-      <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" pattern="[A-Za-z]+" required>
+  if (!ageCheckbox.checked) {
+    alert('You must be older than 18 to continue.');
+    return;
+  }
 
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" pattern="[A-Za-z]+" required>
+  if (!firstNameInput.checkValidity()) {
+    alert('Please enter a valid first name.');
+    return;
+  }
 
-      <label for="dob">Date of Birth (MM/DD/YYYY):</label>
-      <input type="text" id="dob" name="dob" pattern="(0[1-9]|1[0-2])\/([0-2][1-9]|3[0-1])\/\d{4}" required>
+  if (!lastNameInput.checkValidity()) {
+    alert('Please enter a valid last name.');
+    return;
+  }
 
-      <label for="licenseNum">Driver's License Number (8 characters):</label>
-      <input type="text" id="licenseNum" name="licenseNum" pattern="[A-Za-z0-9]{8}" required>
+  if (!dobInput.checkValidity()) {
+    alert('Please enter a valid date of birth (MM/DD/YYYY).');
+    return;
+  }
 
-      <label for="state">State of Issue (2 characters):</label>
-      <input type="text" id="state" name="state" pattern="[A-Za-z]{2}" required>
+  if (!licenseNumInput.checkValidity()) {
+    alert('Please enter a valid driver\'s license number (8 characters).');
+    return;
+  }
 
-      <label for="hasInsurance">Do you have insurance?</label>
-      <select id="hasInsurance" name="hasInsurance">
-        <option value="yes">Yes</option>
-        <option value="no">No</option>
-      </select>
+  if (!stateInput.checkValidity()) {
+    alert('Please enter a valid state abbreviation (2 characters).');
+    return;
+  }
 
-      <button type="submit">Verify</button>
-    </form>
-    <button id="close-popup">Close</button>
-  </div>
-</div>
-      <button type="submit">Verify</button>
-    </form>
-    <button id="close-popup">Close</button>
-  </div>
-</div>
+  // Form is valid, so you can submit the form and access the rest of the website here
+});
+
 
 <div id="main-content" class="hidden">
 <body>
