--- a/CaseProject/Web Security/index.html
+++ b/CaseProject/Web Security/index.html
@@ -9,14 +9,18 @@
         </h1>
         <p>
           There are several ways to improve web security, such as:
-<br>
+          <br></br>
 Using HTTPS: HTTPS encrypts data that is transferred between a web server and a user's browser, which makes it more difficult for hackers to intercept the data.
-<br>
+      Many Browsers now offer HTTPS ONLY MODE researhc your browser and find out if you are elligble to turn on this mode.
+      <br></br>
 Keeping software updated: Software updates often include security patches that fix vulnerabilities that could be exploited by attackers.
-<br>
+    A great software updating engine is Driver Easy. (https://www.drivereasy.com)
+    <br></br>
 Using strong passwords: Weak passwords are easy to guess, so it's important to use strong passwords that are difficult to crack.
-<br>
+  A great tool for password is Last Pass (https://www.lastpass.com)
+  <br></br>
 Avoiding suspicious websites: Some websites can contain malware or other types of malicious code that can infect a user's computer or steal their data.
+To avoid supsicous websites use a VPN such as NordVPN (https://nordvpn.com/download/)
           <p>
         <h4>
           You just experienced six annoying pop ups clicking on this website. You know whats even more Annoying? Websites accesing your personal information. Those pop-ups are just the basics of what information website's can obtain, but here at Luxe Car's, we value our customer's privacy. Follow the steps above to ensure your internet safety.
