--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -66,24 +66,23 @@
     <h1>Luxe Cars</h1>
   </header>
 </div>
-  <div class="tabs">
-  <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
-  <button class="tab-btn" id="about" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
-  <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
-     <button class="tab-btn" id="webSecurity" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</button>
-<section id="bio">
-  <div class="tab-content active" id="shop">
-    <h3>SHOP</h3>
-    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
-  </div>
-  <div class="tab-content active" id="about">
-    <h3>ABOUT US </h3>
-    <p>If you would like to know more about Luxe Cars co. , click on the About Us tab.</p>
-  </div>
-  <div class="tab-content active" id="partners">
-    <h3>PARTNERS</h3>
-    <p> We are very grateful for our partners that  make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
-  
+ <div class="tabs">
+  <button class="tab-btn active" id="shop-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
+  <button class="tab-btn" id="about-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
+  <button class="tab-btn" id="partners-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
+  <button class="tab-btn" id="websecurity-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</button>
+  <section id="bio">
+    <div class="tab-content active" id="shop-tab">
+      <h3>SHOP</h3>
+      <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
+    </div>
+    <div class="tab-content" id="about-tab">
+      <h3>ABOUT US</h3>
+      <p>If you would like to know more about Luxe Cars co., click on the About Us tab.</p>
+    </div>
+    <div class="tab-content" id="partners-tab">
+      <h3>PARTNERS</h3>
+      <p>We are very grateful for our partners that make this happen. If you would like to see a list of our partners, click on the Partners tab.</p>
     </div>
 </section>
           <h1>Contact Us</h1>
