--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -70,7 +70,7 @@
   <button class="tab-btn active" id="shop-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
   <button class="tab-btn" id="about-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
   <button class="tab-btn" id="partners-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
-  <button class="tab-btn" id="websecurity-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</button>
+  <button class="tab-btn active" id="websecurity-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</button>
   <section id="bio">
     <div class="tab-content active" id="shop-tab">
       <h3>SHOP</h3>
