--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -72,7 +72,6 @@
   <button class="tab-btn" id="partners-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
   <button class="tab-btn active" id="websecurity-btn" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</button>
   <section id="bio">
-    <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/"></a>
     <div class="tab-content active" id="shop-tab">
       <h3>SHOP</h3>
       <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
@@ -102,6 +101,7 @@
     </footer>
     </section>
   </main>
+    <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Web%20Security/">Web Security</a>
    <a href="https://jacksonl11.github.io/ClientSide23/">Home</a>
   <footer>
     <p>Copyright © 2023 Luxe Cars Co.</p>
