--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -13,7 +13,7 @@
     <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
     <form id="verification-form">
       <label for="age">Age:</label>
-      <label for="age-checkbox">Are you older than 18?</label>
+      <label for="age-checkbox">Please Select Your Age Group</label>
       <input type="checkbox" id="age-checkbox" name="age-checkbox" required>
 
       <label for="firstName">First Name:</label>
