--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -12,14 +12,32 @@
   <div class="popup-content">
     <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
     <form id="verification-form">
-      <div id="checkboxes"> 
-  <label><input type="checkbox" value="18-20">18-20</label>
-  <label><input type="checkbox" value="21-30">21-30</label>
-  <label><input type="checkbox" value="31-40">31-40</label>
-  <label><input type="checkbox" value="41-50">41-50</label>
-  <label><input type="checkbox" value="51-60">51-60</label>
-  <label><input type="checkbox" value="60+">60+</label>
-</div>
+      <label for="18-20">
+  <input type="checkbox" name="age" value="18-20" id="18-20">
+  18-20
+</label>
+<label for="21-30">
+  <input type="checkbox" name="age" value="21-30" id="21-30">
+  21-30
+</label>
+<label for="31-40">
+  <input type="checkbox" name="age" value="31-40" id="31-40">
+  31-40
+</label>
+<label for="41-50">
+  <input type="checkbox" name="age" value="41-50" id="41-50">
+  41-50
+</label>
+<label for="51-60">
+  <input type="checkbox" name="age" value="51-60" id="51-60">
+  51-60
+</label>
+<label for="60+">
+  <input type="checkbox" name="age" value="60+" id="60+">
+  60+
+</label>
+
+<p>Selected options: <span id="selections"></span></p>
 
       <label for="firstName">First Name:</label>
       <input type="text" id="firstName" name="firstName" pattern="[A-Za-z]+" required>
